# src/app/api-v4/model/models.ts
@@ -4,12 +4,17 @@ export * from './v4AccountListPage';
 export * from './v4AccountListSummary';
 export * from './v4CreateListRequest';
 export * from './v4CreateListResponse';
+export * from './v4DeleteAccessTokenRequest';
 export * from './v4ListContentItem';
 export * from './v4ListDetails';
 export * from './v4ListItemInput';
 export * from './v4ListItemStatus';
+export * from './v4ListItemUpdateInput';
+export * from './v4ListItemUpdatesRequest';
 export * from './v4ListItemsRequest';
 export * from './v4ListMediaType';
+export * from './v4ListSortBy';
 export * from './v4RequestTokenRequest';
 export * from './v4RequestTokenResponse';
 export * from './v4StatusResponse';
+export * from './v4UpdateListRequest';
