# src/app/api-v4/model/v4UpdateListRequest.ts
@@ -7,19 +7,16 @@
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
+import { V4ListSortBy } from './v4ListSortBy';
 
 
-export interface V4CreateListRequest { 
-    name: string;
+export interface V4UpdateListRequest { 
+    name?: string;
     description?: string;
     'public'?: boolean;
-    /**
-     * Language code used by TMDB when creating a v4 list.
-     */
-    iso_639_1?: string;
-    /**
-     * Country code used by TMDB when creating a v4 list.
-     */
-    iso_3166_1?: string;
+    sort_by?: V4ListSortBy;
 }
+export namespace V4UpdateListRequest {
+}
+
 
